# cpp-samples

./: .gitignore  Test1.cpp  Test2.cpp  array_in_struct.cpp  ctor_dtor_order.cpp  explicit_specialization.cpp  speed.cpp  tasks.cpp  tasks2.cpp  test2.cpp  test3.cpp  thread2.c
MyApp/: AndroidManifest.xml  CMakeLists.txt  app_process  build.xml  clean.sh  cmake-android.sh  cmake-x86_64.sh  gdbclient.sh  gdbserver.sh  swig.sh
MyApp/Demo/: CMakeLists.txt  main.cpp
MyApp/MyThread/: Android.mk  Application.mk  CMakeLists.txt
MyApp/MyThread/src/: MyThread.cpp
MyApp/MyThread/swig/: MyThread.i
MyApp/native/: Android.mk  CMakeLists.txt
MyApp/native/include/: Test3.h
MyApp/native/src/: OpenGlSurface.c  Test3.cpp
MyApp/native/swig/: OpenGlSurface.i
ctr_dst/: sizeof.cpp  test1.cpp  test2.cpp  test3.cpp  test4.cpp  test5.cpp
load_and_unload_library/: create_timer_lib_shared.sh  ctest.h  ctest1.c  ctest2.c  implementation.cpp  implementation.h  interface.h  main.cpp
shared_library/: create_timer_lib_shared.sh  timer.cpp  timer.h  vector_speed.cpp
static_library/: ctest.h  ctest1.c  ctest2.c  prog.c  static.sh
templates/: empty.cpp  exception01.cpp  exception02.cpp  explicit_specialization.cpp  init_order.cpp  main3.cpp  main5.cpp  partial_specialization.cpp  partial_specialization4.cpp  partial_specialization_of_class_templates.cpp  partial_specialization_of_class_templates2.cpp  partial_specialization_of_class_templates3.cpp  push_array.cpp  refactoring.cpp  specialization_for_method.cpp  template_01.cpp  template_02.cpp  thread.c  thread.cpp
(+7 files in other folders)
